--- a/backend/khweb/build.gradle
+++ b/backend/khweb/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	testImplementation 'org.springframework.security:spring-security-test'
-
+	implementation 'com.auth0:java-jwt:3.18.1'
 }
 
 test {
