--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "moment": "^2.29.1",
     "swiper": "^5.3.7",
     "tiptap-vuetify": "^2.24.0",
+    "url-loader": "^4.1.1",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
     "vue-cookie": "^1.1.4",
