--- a/backend/khweb/build.gradle
+++ b/backend/khweb/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	//querydsl 추가
+	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.urunner'
@@ -34,7 +36,8 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.2'
 	implementation 'com.auth0:java-jwt:3.18.1'
 	implementation 'org.json:json:20210307'
-
+	//querydsl 추가
+	implementation 'com.querydsl:querydsl-jpa'
 	//implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 }
@@ -42,3 +45,23 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+	jpa = true
+	querydslSourcesDir = querydslDir
+}
+sourceSets {
+	main.java.srcDir querydslDir
+}
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
+}
+//querydsl 추가 끝
+compileQuerydsl.doFirst {
+	if(file(querydslDir).exists() ) delete(file(querydslDir))
+}
+
