--- a/backend/khweb/build.gradle
+++ b/backend/khweb/build.gradle
@@ -61,7 +61,7 @@ compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
 }
 //querydsl 추가 끝
-compileQuerydsl.doFirst {
-	if(file(querydslDir).exists() ) delete(file(querydslDir))
-}
+//compileQuerydsl.doFirst {
+//	if(file(querydslDir).exists() ) delete(file(querydslDir))
+//}
 
