--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "js-base64": "^3.7.2",
     "moment": "^2.29.1",
     "swiper": "^5.3.7",
     "tiptap-vuetify": "^2.24.0",
