--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,7 @@
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.5.10",
-    "vuex": "^3.4.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
