인준님 최근학습 오류 수정

--- a/backend/khweb/build.gradle
+++ b/backend/khweb/build.gradle
@@ -61,37 +61,6 @@ compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
 }
 //querydsl 추가 끝
-
-
-compileQuerydsl.doFirst {
-	if(file(querydslDir).exists() ) delete(file(querydslDir))
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+//compileQuerydsl.doFirst {
+//	if(file(querydslDir).exists() ) delete(file(querydslDir))
+//}
